# Blockchain_live_expolrer

./: Cargo.toml  README.md  daemon.toml
frontend/cardano_frontend/: package-lock.json  package.json
frontend/cardano_frontend/app/: layout.tsx  page.tsx
frontend/cardano_frontend/app/my-transactions/: page.tsx
frontend/cardano_frontend/app/my-wallets/: page.tsx
frontend/cardano_frontend/components/: BlockCard.tsx  BlockList.tsx  LiveIndicator.tsx  Stats.tsx  TransactionCard.tsx  TransactionList.tsx
frontend/cardano_frontend/components/auth/: ProtectedRoute.tsx
frontend/cardano_frontend/components/layout/: Navbar.tsx
frontend/cardano_frontend/components/wallet/: WalletConnectButton.tsx  WalletModal.tsx
frontend/cardano_frontend/context/: AuthContext.tsx  WalletContext.tsx  WebSocketContext.tsx
frontend/cardano_frontend/hooks/: websocket.ts
frontend/cardano_frontend/lib/: api.ts  bech32.ts  cardano.ts
frontend/cardano_frontend/types/: auth.ts  block.ts  transaction.ts  wallet.ts
src/: main.rs  oura_stream.rs  websocket.rs
src/api/: blocks.rs  mod.rs  transactions.rs  user_transactions.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  routes.rs  verification.rs
src/models/: block.rs  transaction.rs
