[package]
name = "cardano-explorer-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
#web framework
actix-web="4"
actix-ws = "0.3.0"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Oura - for blockchain data
oura = { version = "2.0.0" }

# Utilities
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
chrono = "0.4"
