[package]
name = "cardano-explorer-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
#web framework
actix-web="4"
actix-ws = "0.3.0"
actix-cors = "0.7"
futures-util = "0.3"


#Authentication & JWT
jsonwebtoken = "9.3.0"
actix-web-httpauth="0.8"

#cryptography
pallas-crypto="0.33.0"
pallas-codec="0.33.0"
hex="0.4"
bech32="0.11.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Blockfrost
reqwest = { version = "0.12.26", features = ["json"] }

# Oura - for blockchain data
oura = { version = "2.0.0" }

# Utilities
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
chrono = "0.4"
uuid = { version = "1.0", features = ["serde", "v4"] }

once_cell = "1.20"